iai-callgrind/tests/ui/test_library_benchmark_invalid_bench_arguments.stderr
error: Expected 0 arguments but found 1
 --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:5:3
  |
5 | #[bench::id(42)]
  |   ^^^^^^^^^^^^^

error: Expected 1 arguments but found none

         = help: Try passing arguments either with #[bench::some_id(arg1, ...)]
                       or with #[bench::some_id(args = (arg1, ...))]

  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:10:1
   |
10 | #[bench::id()]
   | ^^^^^^^^^^^^^^

error: Expected 1 arguments but found 2
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:15:3
   |
15 | #[bench::id(42, 8)]
   |   ^^^^^^^^^^^^^^^^

error[E0603]: function `bench5` is private
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:39:13
   |
39 |     bench5::bench5();
   |             ^^^^^^ private function
   |
note: the function `bench5` is defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:26:1
   |
26 | fn bench5(my: u8) -> String {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `bench6` is private
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:41:13
   |
41 |     bench6::bench6();
   |             ^^^^^^ private function
   |
note: the function `bench6` is defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:31:5
   |
31 | pub fn bench6() {}
   |     ^^^^^^^^^^^

error[E0603]: function `bench7` is private
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:43:13
   |
43 |     bench7::bench7();
   |             ^^^^^^ private function
   |
note: the function `bench7` is defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:35:5
   |
35 | pub fn bench7() {}
   |     ^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:20:13
   |
19 | #[library_benchmark]
   | -------------------- arguments to this function are incorrect
20 | #[bench::id("hello")]
   |             ^^^^^^^ expected `u8`, found `&str`
   |
note: function defined here
  --> $RUST/core/src/hint.rs
   |
   | pub const fn black_box<T>(dummy: T) -> T {
   |              ^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:27:5
   |
26 | fn bench5(my: u8) -> String {
   |                      ------ expected `String` because of return type
27 |     my
   |     ^^- help: try using a conversion method: `.to_string()`
   |     |
   |     expected struct `String`, found `u8`

error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:39:5
   |
39 |     bench5::bench5();
   |     ^^^^^^^^^^^^^^-- an argument of type `u8` is missing
   |
note: function defined here
  --> tests/ui/test_library_benchmark_invalid_bench_arguments.rs:26:4
   |
26 | fn bench5(my: u8) -> String {
   |    ^^^^^^ ------
help: provide the argument
   |
39 |     bench5::bench5(/* u8 */);
   |                   ~~~~~~~~~~
